Moved some classes to different files, fixed header text alignment

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -52,3 +52,23 @@ a, a:hover {
 	color: inherit;
 	text-decoration: none;
 }
+
+.header-text {
+	color: $light-purple;
+	font-size: 18px;
+	margin-right: 64px;
+	margin-bottom: 0px;
+	padding-top: 8px;
+
+	a {
+		margin-left: 18px;
+		color: $purple;
+	}
+}
+
+.center-box {
+	margin: auto auto;
+	width: 50%;
+	height: 80%;
+	text-align: center;
+}
