--- a/app/assets/stylesheets/welcome.scss
+++ b/app/assets/stylesheets/welcome.scss
@@ -40,21 +40,3 @@
 	padding-top: 4px;
 }
 
-.header-text {
-	color: $light-purple;
-	font-size: 18px;
-	margin-right: 64px;
-	margin-bottom: 0px;
-
-	a {
-		margin-left: 18px;
-		color: $purple;
-	}
-}
-
-.center-box {
-	margin: auto auto;
-	width: 50%;
-	height: 80%;
-	text-align: center;
-}
